--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^2.8.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
